--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Web site created using create-react-app" />
 
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@400;600;700;800&display=swap');
   </style>
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
